# finmind

./: .env  .gitignore  Dockerfile  Makefile  Pipfile  README.md  bk_crawl_stock.service  bk_crawl_stock.sh  call_fastapi.py  crawl_stock_run_cerely_twse.service  crawl_stock_run_cerely_twse.sh  crawl_stock_run_everyday_twse.service  crawl_stock_run_everyday_twse.sh  crawl_stock_setup.service  crawl_stock_setup.sh  create_table.sql  docker-compose.yml  docker_compose_up.py  genenv.py  local.ini  main.py  mysql.yml  pyproject.toml  rabbitmq.yml  scheduler.py  setup.py
.history/src/: twse_clawler_20241111011047.py  twse_clawler_20241111011125.py  twse_clawler_20241111011859.py  twse_clawler_20241111012100.py  twse_clawler_20241111012120.py  twse_crawler_20241111012139.py  twse_crawler_20241111012453.py  twse_crawler_20241111014156.py  twse_crawler_20241111014409.py  twse_crawler_20241111015246.py  twse_crawler_20241111015333.py  twse_crawler_20241111015431.py  twse_crawler_20241111015821.py  twse_crawler_20241111015856.py
data/: 20241101.csv  20241104.csv
financialdata/: clients.py  config.py  producer.py  router.py  twse_crawler.py
financialdata/backend/db/: __init__.py  clients.py  db.py  router.py
financialdata/crawler/: taiwan_stock_price.py
financialdata/schema/: dataset.py
financialdata/tasks/: task.py  worker.py
src/: twse_crawler.py
