[tool.poetry]
name = "finmind"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.0.1"
pandas = "^2.2.3"
requests = "^2.32.3"
pydantic = "^2.9.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
